# xrap_lamp

./: CMakeLists.txt  README.md  prestart.sh
ble/: simple-gattserv.cpp  simple-gattserv.h
dts/: sun50i-h616-i2s0.dtbo  sun50i-h616-i2s3.dtbo
helpers/: Logger.cpp  Logger.h  SignalHandler.cpp  SignalHandler.h
lib/: dr_wav.c  dr_wav.h  smbus.cpp  smbus.h  ws2812.cpp  ws2812.h
model_weights/: weights.pt
src/: Image.h  M701.cpp  M701.h  lampable.cpp  lampable.h  led_effects.cpp  led_effects.h  main.cpp  predictionc.cpp  predictionc.h  sound_input.cpp  sound_input.h  touch.cpp  touch.h
src/effects/: Effect.cpp  Effect.h
src/effects/basic/: FireEffect.cpp  FireEffect.h  JustLamp.cpp  JustLamp.h  MatrixEffect.cpp  MatrixEffect.h  SnowEffect.cpp  SnowEffect.h  SparklesEffect.cpp  SparklesEffect.h  SunSet.cpp  SunSet.h
